Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111511

Object destructuring breaks qmlformat

    XMLWordPrintable

Details

    • 310428e29 (dev), 414240ddc (6.5.0), 0ee5c6e1a (6.5), 5d2504dba (tqtc/lts-6.2)

    Description

      This example compiles and runs fine:

       

      import QtQuick
      Item {
          Component.onCompleted: {  ([]) => {} }
      }
      

      But causes this error when run through `qmlformat`:

      4:28: [Dom][QmlFile][Parsing] Error: Expected token `,' for .currentItem

       

      Attachments

        For Gerrit Dashboard: QTBUG-111511
        # Subject Branch Project Status CR V

        Activity

          People

            fabiankosmale Fabian Kosmale
            clickingbuttons clicking buttons
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: