qmlformat: Fix handling of object destructuring in functions

We weren't considering the bindingTarget of PatternElements, which broke
functions using object destructuring in the parameter list.

While the resulting formatting is not very pretty, it at least is
syntactically correct and the formatter doesn't crash.

Fixes: QTBUG-111511
Change-Id: Ie22fed2160538bf0c5733b5aced0fdac64621346
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 310428e292243770fb3bd3b48e9f136b56d68b42)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>