tests/auto/qml/qmlformat/data/arrowFunctionWithBinding.formatted.qml
@@ -1,0 +1,8 @@
+import QtQuick
+
+Item { Component.onCompleted: { let f = ([]) => {};
+        let g = ([a]) => {};
+        let h = ([a, b]) => {};
+        let i = ([a, ...b]) => {};
+    }
+}
